--- a/project.properties
+++ b/project.properties
@@ -11,8 +11,8 @@
 #proguard.config=${sdk.dir}\tools\proguard\proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-10
+target=Google Inc.:Google APIs:16
 android.library=true
-android.library.reference.1=..\\protocol-carrier
-android.library.reference.2=..\\android.security.client
-android.library.reference.3=../smartcampus.android.common
+android.library.reference.1=../smartcampus.android.common
+android.library.reference.2=../protocol-carrier
+android.library.reference.3=../android.security.client
