--- a/project.properties
+++ b/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=Google Inc.:Google APIs:16
 android.library=true
-android.library.reference.1=../smartcampus.android.common
+android.library.reference.1=../android.common
 android.library.reference.2=../protocol-carrier
